--- a/client/src/App.css
+++ b/client/src/App.css
@@ -58,6 +58,10 @@
     font-family: 'Quicksand'; 
 }
 
+.registerButton{
+    text-align: center;
+}
+
 .inputInfo{
     padding: 15px;
     margin: 10px;
@@ -69,6 +73,11 @@
     padding: 15px;
     width: 20%;
     max-width: 319px;
+    background-color: gray;
+    color: white;
+    text-align: center;
+    border: none;
+    border-radius: 4px;
 }
 
 body {
