--- a/client/src/App.css
+++ b/client/src/App.css
@@ -42,7 +42,7 @@
     }
 }
 
-.loginBlock{
+.loginBlock {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -55,21 +55,21 @@
     overflow: hidden;
     background-color: #333;
     font-size: x-large;
-    font-family: 'Quicksand'; 
+    font-family: 'Quicksand';
 }
 
-.registerButton{
+.registerButton {
     text-align: center;
 }
 
-.inputInfo{
+.inputInfo {
     padding: 15px;
     margin: 10px;
     border-radius: 4px;
     width: 15%;
 }
 
-.loginButton{
+.loginButton {
     padding: 15px;
     width: 20%;
     max-width: 319px;
@@ -78,13 +78,13 @@
     text-align: center;
     border: none;
     border-radius: 4px;
+    cursor: pointer;
 }
 
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+        sans-serif;
     background-color: #8D918D;
     background-image: url(background.jpg);
 }
-
